# profile.mobile.apps.native.indicator

./: .cproject  .project  AUTHORS  CMakeLists.txt  Doxyfile  NOTICE  org.tizen.indicator-1.0.0-arm.tpk  org.tizen.indicator-1.0.0-i386.tpk  org.tizen.indicator.efl  org.tizen.indicator.manifest  org.tizen.indicator.rule  project_def.prop  tizen-manifest.xml
CMake/: CMakeLists.txt
CMake/res/: CMakeLists.txt
CMake/res/po/: CMakeLists.txt
CMake/res/resource/: CMakeLists.txt
daemon/: box.c  box.h  common.h  icon.c  indicator.c  indicator.h  indicator_box_util.c  indicator_box_util.h  indicator_icon_list.c  indicator_icon_list.h  indicator_icon_util.c  indicator_icon_util.h  indicator_ui.c  indicator_ui.h  indicator_util.c  indicator_util.h  list.c  list.h  log.h  main.c  main.h  message.c  message.h  noti_win.c  plmn.c  plmn.h  ticker.c  ticker.h  util.c  util.h
data/: CMakeLists.txt  indicator.conf  indicator.desktop.in  indicator.sh.in  indicator.xml.in
data/resource/: CMakeLists.txt  color_classes.edc  indicator.edc  indicator_common.edc  indicator_gui.h  indicator_icon_animation.edc  indicator_icon_nonfixed_theme.edc  indicator_icon_theme.edc  indicator_land.edc  indicator_port.edc  ticker.edc  ticker_animated_icon.edc  ticker_default.edc
debian/: changelog  control  org.tizen.indicator.install.in  org.tizen.indicator.postinst.in  rules
inc/: bg_color.h  box.h  common.h  icon.h  indicator.h  indicator_gui.h  instant_message.h  list.h  log.h  main.h  modules.h  more_notify.h  noti_win.h  notification_dispatcher.h  ticker.h  toast_popup.h  tts.h  util.h
modules/: modules.c  modules.h
modules/clock/: clock.c
modules/connection/: connection.c  connection.h  dock.c  mobile_hotspot.c  nosim.c  usb.c  wifi.c
modules/home/: home.c  search.c
modules/information/: alarm.c  earphone.c  fm_radio.c  mmc.c  more_notify.c  mp3_playing.c  noti.c  voice_recorder.c
modules/network/: roaming.c  rssi.c  rssi.h
modules/power/: battery.c
modules/processing/: active_sync.c  call.c  call_divert.c  call_divert.h  downloading.c  sos.c  transfer.c  trnsfr.c  uploading.c
modules/setting/: bluetooth.c  gps.c  nfc.c  rotation-lock.c  silent.c  wifi-direct.c
packaging/: indicator.path  indicator.service  indicator.service.system  org.tizen.indicator.changes  org.tizen.indicator.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  cs.po  fi.po  ga.po  hu.po  hy.po  is.po  ko_KR.po  sl.po  update-po.sh  zh_TW.po
res/: indicator.sh.in  org.tizen.indicator_ChangeableColorInfo.xml  org.tizen.indicator_ChangeableFontInfo.xml
res/po/: el_GR.po  et.po  kk.po  ro.po  sk.po  sv.po  zh_CN.po
res/resource/: color_classes.edc  indicator_common.edc  indicator_icon_animation.edc  indicator_icon_nonfixed_theme.edc  indicator_icon_theme.edc  indicator_port.edc  ticker.edc
src/: bg_color.c  box.c  icon.c  indicator.c  list.c  main.c  message.c  noti_win.c  ticker.c  tts.c  util.c
src/modules/: modules.c
src/modules/clock/: clock.c
src/modules/connection/: connection.c  dock.c  mobile_hotspot.c  usb.c  wifi.c
src/modules/home/: search.c
src/modules/information/: alarm.c  earphone.c  ext_storage.c  fm_radio.c  lowmem.c  mmc.c  more_notify.c  mp3_playing.c  noti.c  toast_popup.c  video_play.c  voice_recorder.c
src/modules/network/: roaming.c  rssi.c
src/modules/power/: battery.c
src/modules/processing/: call.c  call_divert.c  call_options.c  downloading.c  uploading.c
src/modules/setting/: bluetooth.c  do_not_disturb.c  gps.c  nfc.c  silent.c  wifi-direct.c
src/notifications/: instant_message.c  notification_dispatcher.c
test/: indicator_debug_util.c  indicator_debug_util.h  indicator_test_util.c  indicator_test_util.h
